# zoomarket

./: .env.example  Makefile  README.md  docker-compose.dev.yaml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e53c8066370_database_create.py  49e591d12ffa_migration_new_base.py  74f8140b2f81_add_data.py  79d2959176de_new_migration_with_url_image.py  e26438775af3_insert_data_test.py  f5f36a39bb61_create_new_table.py
backend/docker_files/: entrypoint.sh  wait-for-command.sh
backend/src/apps/service/: router.py
backend/src/apps/service/model/: model.py
backend/src/apps/service/schema/get/: schema.py
backend/src/settings/: config.py  const.py  db.py
frontend/: Dockerfile
nginx/: nginx.conf
technical_description/: general.md  glossary.md  site_pages.md  stack.md
