[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dezmound1 <Dezmoynd@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
react = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
